
Features
--------

* Add a list of template variables to documentation (Issues #2328,
  #2712)
* Add ``{post_title}`` tag for Read More links (Issue #2709)
* Include MathJax config only when needed (via Issue #2715)
* Include KaTeX CSS automatically when needed (Issue #2715)
* Split out math code into new ``math_helper.tmpl`` template (Issue
  #2715)

Bugfixes
--------

* Make date ranges work in shortcode-based post lists (Issue #2690)
* Read data files only if Nikola configuration exists (Issue #2708)
* Make ``PAGE_INDEX`` work with ``PRETTY_URLS`` (Issue #2705)
* Fix PHP posts/pages not rendering on Windows (Issue #2706)
* Improving support for PostScanner plugins by asking them which compilers
  are unused (Issue #2496)

New in v7.8.4
=============

Features
--------

* Refactor RSS feed generation to allow better plugin access
* Add Jupyter config as dependency for jupyter posts (by @knowsuchagency)
* Make ``nikola plugin --list-installed`` more readable (Issue #2692)
* Accept ``now`` in post-list date conditions
* Add ``RSS_COPYRIGHT``, ``RSS_COPYRIGHT_PLAIN``, and
  ``RSS_COPYRIGHT_FORMATS`` options in conf.py which can be disabled
  by specifying ``copyright_=False`` to ``generic_rss_renderer``, or
  overriden by specifying an explicit value.
* Write PID of detached ``nikola serve`` process to a file called
  ``nikolaserve.pid``
* Append file name (generated from title) if ``nikola new_post``
  receives directory name as path (Issue #2651)
* Add a ``require_all_tags`` parameter to the ``post-list`` directive to
  show only posts that have all specified tags. (Issue #2665)
* Add ``META_GENERATOR_TAG`` option in conf.py allowing the meta generator
  tag to be disabled (Issue #2628)
* Add ``YUI_COMPRESSOR_EXECUTABLE``, ``CLOSURE_COMPILER_EXECUTABLE``,
  ``OPTIPNG_EXECUTABLE``, ``JPEGOPTIM_EXECUTABLE`` and
  ``HTML_TIDY_EXECUTABLE`` to configure executables for built-in filters.
  (Issue #2615)
* Allow setting custom GUID in feeds (Issue #2378)

Bugfixes