@@ -24,6 +24,7 @@ Features
 Bugfixes
 --------
 
+* Rename ``POSTS_SECTION_ARE_INDEXES`` to ``POSTS_SECTIONS_ARE_INDEXES``
 * Make date ranges work in shortcode-based post lists (Issue #2690)
 * Read data files only if Nikola configuration exists (Issue #2708)
 * Make ``PAGE_INDEX`` work with ``PRETTY_URLS`` (Issue #2705)
